Fix failing unit test in Enterprise build. Pass -XX:MaxPermSize=128M to junit JVM
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@17174 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 621f4530c95aaa28a9a1e54cb6cba5f584de8ac4